Fixed icon button styling issue on Safari. Adjusted top margin of homepage

--- a/frontend/src/routes/HomeRoute/HomeRoute.scss
+++ b/frontend/src/routes/HomeRoute/HomeRoute.scss
@@ -16,7 +16,7 @@
   .content-container {
     padding: 50px;
     max-width: 1200px;
-    margin: 20vh auto 0 auto;
+    margin: 10vh auto 0 auto;
 
     display: grid;
     grid-template-rows: max-content;
